--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -7,7 +7,7 @@ body {
         font-family: 'Lobster';
     }
     .page-header {
-            background-color: #ff9400;
+            background-color: #0d47a1;
             margin-top: 0;
             padding: 20px 20px 20px 40px;
         }
@@ -23,7 +23,7 @@ body {
         }
 
         h1, h2, h3, h4 {
-            font-family: 'Lobster', cursive;
+            font-family: 'Lobster';
         }
 
         .date {
